--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.131.5",
     "@tanstack/router-plugin": "^1.121.2",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.542.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
