--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "eslint.config.js",
     "prettier.config.js",
     "vite.config.js",
-    "src/routes/marketplace/supplier.$ingredientId.tsx"
+    "src/routes/marketplace/supplier.$ingredientId.lazy.tsx"
   ],
 
   "compilerOptions": {
@@ -13,7 +13,7 @@
     "jsx": "react-jsx",
     "module": "ESNext",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "types": ["vite/client"],
+    "types": ["vite/client", "node"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
