--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.2.2",
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.131.5",
     "@tanstack/router-plugin": "^1.121.2",
     "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.19.4",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -32,6 +37,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/node": "^20.11.30",
     "@types/react": "^19.0.8",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
@@ -42,6 +48,6 @@
     "web-vitals": "^4.2.4"
   },
   "engines": {
-    "node": ">=20.18.1"
+    "node": ">=22.19.0"
   }
 }
