endpoint integration and ui changes

--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.9",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.2.2",
+    "@tanstack/react-query": "^5.90.3",
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.131.5",
+    "@tanstack/react-store": "^0.8.0",
     "@tanstack/router-plugin": "^1.121.2",
+    "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.542.0",
     "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
@@ -35,6 +42,7 @@
     "@tanstack/eslint-config": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
+    "@types/axios": "^0.9.36",
     "@types/node": "^20.11.30",
     "@types/react": "^19.0.8",
     "@types/react-big-calendar": "^1.16.3",
