--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "eslint.config.js",
     "prettier.config.js",
     "vite.config.js",
-    "src/routes/_appLayout/marketplace/supplier.$ingredientId.lazy.tsx"
+    "src/routes/_appLayout/marketplace/supplier.$ingredientId.lazy.tsx",
+    "src/types"
   ],
 
   "compilerOptions": {
