--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "eslint.config.js",
     "prettier.config.js",
     "vite.config.js",
-    "src/routes/_appLayout/marketplace/supplier.$ingredientId.lazy.tsx",
+    "src/routes/_appLayout/marketplace/supplier.$slug.$ingredientId.lazy.tsx",
     "src/types"
   ],
 
