fixing some performance stuffs

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prettier": "^3.5.3",
     "typescript": "^5.7.2",
     "vite": "^6.3.5",
+    "vite-imagetools": "^9.0.0",
     "vitest": "^3.0.5",
     "web-vitals": "^4.2.4"
   },
