--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.10.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.6"
@@ -48,6 +49,7 @@
     "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "baseline-browser-mapping": "^2.8.32",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
     "typescript": "^5.7.2",
